--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,9 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// DataTables
+@import '~datatables/media/css/jquery.dataTables.min.css';
+
 
 .navbar-laravel {
   background-color: #fff;
