--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,8 +8,13 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 // DataTables
-@import '~datatables/media/css/jquery.dataTables.min.css';
-
+@import '~datatables/media/css/jquery.dataTables';
+// Fonts Awesome
+@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/solid.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
+@import '~@fortawesome/fontawesome-free/scss/regular.scss';
+@import '~@fortawesome/fontawesome-free/css/fontawesome';
 
 .navbar-laravel {
   background-color: #fff;
